# Router

./: CMakeLists.txt  README.md  action.yml  config-AX18-lean.cfg  config-AX18-purge.cfg  config-AX18-ss-xray.cfg  config-AX18-ss.cfg  config-D2-lean.cfg  config-D2-purge.cfg  config-D2-ss-xray.cfg  config-D2-ss.cfg  config-IPQ60xx.cfg  config-M2-org.cfg  diy-part1-AX18-lean.sh  diy-part1-D2.sh  diy-part1-IPQ60xx.sh  diy-part1-M2-ORG.sh  diy-part2-AX18-lean.sh  diy-part2-D2.sh  diy-part2-IPQ60xx.sh  diy-part2-M2-ORG.sh  entrypoint.sh  feeds.conf.default  go.mod  go.sum  patch-luci-app-passwall.patch  patch-luci-app-ssr-plus.patch
.github/workflows/: AX18-lean.yml  AX18-purge.yml  AX18-ss-xray.yml  AX18-ss.yml  Auto cache software release jsons.yml  Auto compile with openwrt sdk.yml  Auto update packages v3.yml  D2-lean.yml  D2-purge.yml  D2-ss-xray.yml  D2-ss.yml  IPQ60xx-VIKINGYFY.yml  M2-LiBwrt.yml  (+14 more)
config/: Config-images.in  Config-ipq.in  Config-kernel.in
dae/: Makefile
daed/: Makefile
dns2socks/: Makefile
geoview/: Makefile
haproxy/: Makefile
include/: package.mk  u-boot.mk
luci-app-dae/: Makefile
luci-app-nikki/: Makefile
luci-app-passwall/: Makefile
luci-app-ssr-plus/: Makefile
mihomo/: Makefile
mihomo-alpha/: Makefile
mihomo-meta/: Makefile
nikki/: Makefile
redsocks2/: Makefile
scripts/: projectsmirrors.json
shadowsocks-rust/: Makefile
shadowsocksr-libev/: Makefile
simple-obfs/: Makefile
sing-box/: Makefile
src/: proxy.c
tcping/: Makefile
tuic-client/: Makefile
v2ray-geodata/: Makefile
vmlinux-btf/: Makefile
(+374 files in other folders)
